# simple-scoreboard

./: .dir-locals.el  .pre-commit-config.yaml  lambda_handler.py  main.tf  pyproject.toml
.github/workflows/: cd.yml  ci.yml
src/simple_scoreboard/: __init__.py  template.html
src/simple_scoreboard/test/: conftest.py  test_simple_scoreboard.py
