[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
# cf. tool.setuptools.package-dir section below
name = "simple-scoreboard"
description = "A serverless score-tracking web app"
version = "0.0.0"
# cf. https://www.bitecode.dev/p/relieving-your-python-packaging-pain,
# https://devguide.python.org/versions/
requires-python = ">=3.11"
# cf. https://pypi.org/classifiers/
classifiers = [
    "Private :: Do Not Upload",
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Education",
    "Operating System :: OS Independent",
    "Programming Language :: Other",
    "Programming Language :: Python :: 3",
    "Topic :: Education",
]
# To avoid unnecessary developer overhead, only set version
# constraints to address capability, compatibility, or security
# issues, and avoid pinning specific versions if possible.
dependencies = [
    "boto3",
]

[project.optional-dependencies]
dev = [
    "black",
    "checkov",
    "flake8-bugbear",
    "flake8-pytest-style",
    "isort",
    "pre-commit",
]
test = [
    "moto[all]",
    "pytest",
    "pytest-cov",
    "pytest-emoji",
    "pytest-md",
    "pytest-order",
    "pytest-socket",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.isort]
profile = "black"
skip_gitignore = true

[tool.pytest.ini_options]
# Recommended for new projects;
# cf. https://docs.pytest.org/en/latest/explanation/goodpractices.html#choosing-an-import-mode.
addopts = [
    "--import-mode=importlib",
]
# Invoke smoke tests with `pytest -k smoke` or `pytest -m "smoke and
# not slow"`.  See also https://docs.pytest.org/en/stable/mark.html,
# https://stackoverflow.com/a/52369721.
markers = [
    "slow",
    "smoke",
]

[tool.setuptools.package-data]
simple_scoreboard = [
    "template.html",
]

[tool.setuptools.package-dir]
simple_scoreboard = "src/simple_scoreboard"
